--- a/css/login.css
+++ b/css/login.css
@@ -26,7 +26,7 @@
 
 body {
     min-height: 100vh;
-    background: url('../Login Background.png') no-repeat center center fixed;
+    background: url('../Media/LoginBackground.png') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     align-items: center;
